@@ -51,7 +51,7 @@
     <!--  Dependency Versions -->
     <!--  Please maintain a sorted list -->
     <!--  Intellij: Search actions (Press shift twice), type "sort lines", then enter :-) -->
-    <aspectj.version>1.9.9.1</aspectj.version>
+    <aspectj.version>1.9.19</aspectj.version>
     <assertj.version>3.17.2</assertj.version>
     <auto-service.version>1.0.1</auto-service.version>
     <avro.version>1.7.7</avro.version>
@@ -255,12 +255,13 @@
           <configuration>
             <!-- See https://winterbe.com/posts/2018/08/29/migrate-maven-projects-to-java-11-jigsaw/ -->
             <argLine>
+              <!-- TODO CYRIL can be removed once migration to java 17 is done -->
               --illegal-access=permit
             </argLine>
             <argLine>
               -javaagent:"${settings.localRepository}"/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar
             </argLine>
-            <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+            <!--<argLine>-add-opens java.base/java.lang=ALL-UNNAMED</argLine>-->
             <threadCount>1</threadCount>
             <systemPropertyVariables>
               <projectVersion>${project.version}</projectVersion>
